--- a/css/main.css
+++ b/css/main.css
@@ -17,3 +17,15 @@ header, footer{
 .squares{
     list-style-type: square;
 }
+ul li:nth :nth-child(odd){
+    background-color: rgb(171, 238, 240);
+}
+a:link{
+    text-decoration: none;
+    background-color: rgb(26, 117, 192);
+    color: white;
+    border-style: dotted;
+}
+a:hover{
+    background-color: rgb(0, 62, 87);
+}
