--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 /* adding font size to body */
 body{
+    font-family: sans-serif;
     font-size: 18px;
 }
 /* adding background colour to header and footer */
@@ -25,6 +26,7 @@ a:link{
     background-color: rgb(129, 194, 247);
     color: white;
     border-style: dotted;
+    border-color: seashell;
 }
 a:hover{
     background-color: rgb(0, 62, 87);
